@@ -34,59 +34,44 @@
 namespace WebCore {
 
 FetchBodySource::FetchBodySource(FetchBodyOwner& bodyOwner)
-    : m_bodyOwner(&bodyOwner)
+    : m_bodyOwner(bodyOwner)
 {
 }
 
 void FetchBodySource::setActive()
 {
-    ASSERT(m_bodyOwner);
-    if (m_bodyOwner)
-        m_bodyOwner->setPendingActivity(m_bodyOwner);
+    m_bodyOwner.setPendingActivity(&m_bodyOwner);
 }
 
 void FetchBodySource::setInactive()
 {
-    ASSERT(m_bodyOwner);
-    if (m_bodyOwner)
-        m_bodyOwner->unsetPendingActivity(m_bodyOwner);
+    m_bodyOwner.unsetPendingActivity(&m_bodyOwner);
 }
 
 void FetchBodySource::doStart()
 {
-    ASSERT(m_bodyOwner);
-    if (m_bodyOwner)
-        m_bodyOwner->consumeBodyAsStream();
+    m_bodyOwner.consumeBodyAsStream();
 }
 
 void FetchBodySource::doPull()
 {
-    ASSERT(m_bodyOwner);
-    if (m_bodyOwner)
-        m_bodyOwner->feedStream();
+    m_bodyOwner.feedStream();
 }
 
 void FetchBodySource::doCancel()
 {
     m_isCancelling = true;
-    ASSERT(m_bodyOwner);
-    if (!m_bodyOwner)
-        return;
-
-    m_bodyOwner->cancel();
-    m_bodyOwner = nullptr;
+    m_bodyOwner.cancel();
 }
 
 void FetchBodySource::close()
 {
-    m_bodyOwner = nullptr;
     controller().close();
     clean();
 }
 
 void FetchBodySource::error(const String& value)
 {
-    m_bodyOwner = nullptr;
     controller().error(value);
     clean();
 }
