@@ -1,3 +1,15 @@
+2018-07-19  David Fenton  <david_fenton@apple.com>
+
+        Unreviewed, rolling out r233994.
+
+        Caused EWS and bot failures due to assertions added
+
+        Reverted changeset:
+
+        "FetchResponse should close its stream when loading finishes"
+        https://bugs.webkit.org/show_bug.cgi?id=187790
+        https://trac.webkit.org/changeset/233994
+
 2018-07-19  Jer Noble  <jer.noble@apple.com>
 
         REGRESSION(r233926): media/modern-media-controls/media-controller/media-controller-inline-to-fullscreen-to-pip-to-inline.html is a TIMEOUT failure
